--- a/app/css/style.css
+++ b/app/css/style.css
@@ -48,7 +48,7 @@ html.dark {
 
 #theme-toggler {
   position: absolute;
-  right: 0;
+  right: 1rem;
   top: 0;
   width: 2.25rem;
   height: 2.25rem;
@@ -337,8 +337,8 @@ input {
   font-family: "Arial", sans-serif;
   border: 0.125rem solid #ccc;
   border-radius: 0.5rem;
-  background-color: #fff;
-  color: #333;
+  background-color: var(--background-color);
+  color: var(--text-color);
   outline: none;
   transition: border-color 0.3s ease, box-shadow 0.3s ease;
   box-sizing: border-box;
