--- a/app/css/style.css
+++ b/app/css/style.css
@@ -355,7 +355,9 @@ html.light .modal {
   gap: 1rem;
 }
 
-.more-settings {
+/* no functional with more-settings now *\
+/* maybe add in future  *\
+/* .more-settings {
   width: 2rem;
   height: 2rem;
   background-size: contain;
@@ -373,7 +375,7 @@ html.dark .more-settings {
 .more-settings:hover {
   cursor: pointer;
   transform: rotate(90deg);
-}
+} */
 
 .label {
   display: flex;
@@ -406,7 +408,7 @@ html.dark .more-settings {
   flex-wrap: wrap;
 }
 
-input {
+.input {
   width: 6.25rem;
   padding: 0.25rem 0.5rem;
   font-size: 1.125rem;
@@ -420,11 +422,11 @@ input {
   box-sizing: border-box;
 }
 
-input:hover {
+.input:hover {
   border-color: var(--input-hover-border-color);
 }
 
-input:focus {
+.input:focus {
   border-color: var(--input-hover-border-color);
   box-shadow: 0 0 1.5rem rgba(0, 123, 255, 0.2);
 }
@@ -511,6 +513,77 @@ select:focus {
 
 select:hover {
   border-color: #007bff;
+}
+
+.safe-click-toggler {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  margin-bottom: 1.5rem;
+}
+
+.safe-click-toggler p {
+  color: var(--text-color);
+  font-size: 1rem;
+}
+
+//custom switch
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 2.5rem;
+  height: 1.5rem;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(
+    --cell-background-color
+  ); /* Background color of the switch when it's OFF */
+  transition: all 0.5s ease 0s;
+  border-radius: 1.5rem;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 1rem;
+  width: 1rem;
+  left: 0.25rem;
+  bottom: 0.25rem;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: var(
+    --input-hover-border-color
+  ); /* Background color of the switch when it's ON */
+}
+
+input:checked + .slider:before {
+  transform: translateX(1rem); /* Moves the circle to the right when ON */
+}
+
+.slider:before {
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
+}
+
+.slider {
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
 .cell:after {
